--- a/test-output/MBSAI.html
+++ b/test-output/MBSAI.html
@@ -58,7 +58,7 @@
 		<!-- nav-right -->
 		<ul id='nav-mobile' class='right hide-on-med-and-down nav-right'>
 			<a href='#!'>
-			<span class='label blue darken-3 suite-start-time'>Jul 23, 2021 12:14:50 PM</span>
+			<span class='label blue darken-3 suite-start-time'>Jul 23, 2021 02:10:52 pm</span>
 			</a>
 		</ul>
 	</div>
@@ -150,14 +150,14 @@
 				<li class='test displayed active  pass' status='pass' bdd='false' test-id='1'>
 					<div class='test-heading'>
 						<span class='test-name'>Login</span>
-						<span class='test-time'>Jul 23, 2021 12:15:04 PM</span>
+						<span class='test-time'>Jul 23, 2021 02:10:52 pm</span>
 						<span class='test-status right pass'>pass</span>
 					</div>
 					<div class='test-content hide'>
 <div class='test-time-info'>
-	<span class='label start-time'>Jul 23, 2021 12:15:04 PM</span>
-	<span class='label end-time'>Jul 23, 2021 12:15:04 PM</span>
-	<span class='label time-taken grey lighten-1 white-text'>0h 0m 0s+3ms</span>
+	<span class='label start-time'>Jul 23, 2021 02:10:52 pm</span>
+	<span class='label end-time'>Jul 23, 2021 02:10:52 pm</span>
+	<span class='label time-taken grey lighten-1 white-text'>0h 0m 0s+49ms</span>
 </div>
 <div class='test-attributes'>
 	<div class='category-list'>
@@ -179,7 +179,7 @@
 		<tbody>
 			<tr class='log' status='info'>
 				<td class='status info' title='info' alt='info'><i class='material-icons'>info_outline</i></td>
-				<td class='timestamp'>12:15:04 PM</td>
+				<td class='timestamp'>2:10:52 pm</td>
 				<td class='step-details'>
 						Step-1 : Open URL : https://dev.my.matchbookservices.com
 					
@@ -252,7 +252,7 @@
 								</thead>
 								<tbody>
 									<tr>
-										<td>Jul 23, 2021 12:15:04 PM</td>
+										<td>Jul 23, 2021 02:10:52 pm</td>
 										<td class='linked' test-id='1'>Login</td>
 										<td><span class='test-status pass'>pass</span></td>
 									</tr>
@@ -312,7 +312,7 @@
 								</thead>
 								<tbody>
 									<tr>
-										<td>Jul 23, 2021 12:15:04 PM</td>
+										<td>Jul 23, 2021 02:10:52 pm</td>
 										<td class='linked' test-id='1'>Login</td>
 										<td><span class='test-status pass'>pass</span></td>
 									</tr>
@@ -350,19 +350,19 @@
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Start
-					<div class='panel-lead'>Jul 23, 2021 12:14:50 PM</div>
+					<div class='panel-lead'>Jul 23, 2021 02:10:52 pm</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 			 		End
-			 		<div class='panel-lead'>Jul 23, 2021 12:15:04 PM</div>
+			 		<div class='panel-lead'>Jul 23, 2021 02:10:52 pm</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Time Taken
-					<div class='panel-lead'>0h 0m 13s+939ms</div>
+					<div class='panel-lead'>0h 0m 0s+515ms</div>
 				</div>
 			</div>
 			<div class='col s4'>
@@ -441,7 +441,7 @@
 		</script>
 		<script>
 			var timeline = {
-			        "Login":0.003
+			        "Login":0.049
 			};
 		</script>
 	
