--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,16 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="99686d">  <td>21/07/23 12:14:50</td>   <td>0</td> <td title="&gt;&gt;MasterInit.fetchSuite(org.testng.ITestContext)[pri:0, instance:Demo.MatchbookAI.LoginTest@43b9fd5]">&gt;&gt;fetchSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1046545660</td>   <td></td> </tr>
-<tr bgcolor="99686d">  <td>21/07/23 12:14:53</td>   <td>2957</td> <td>&nbsp;</td><td title="&gt;&gt;MasterInit.fetchSuiteConfiguration(org.testng.ITestContext)[pri:0, instance:Demo.MatchbookAI.LoginTest@43b9fd5]">&gt;&gt;fetchSuiteConfiguration</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1046545660</td>   <td></td> </tr>
-<tr bgcolor="99686d">  <td>21/07/23 12:14:53</td>   <td>2965</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;MasterInit.setUp(java.lang.String, java.lang.String, java.lang.reflect.Method, org.testng.ITestContext, org.testng.ITestResult)[pri:0, instance:Demo.MatchbookAI.LoginTest@43b9fd5]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1046545660</td>   <td></td> </tr>
-<tr bgcolor="b7fdc8">  <td>21/07/23 12:15:04</td>   <td>13880</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.login()[pri:0, instance:Demo.MatchbookAI.LoginTest@43b9fd5]">login</td> 
-  <td>main@1046545660</td>   <td></td> </tr>
-<tr bgcolor="99686d">  <td>21/07/23 12:15:04</td>   <td>13938</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;MasterInit.tearDown(org.testng.ITestResult, org.testng.ITestContext)[pri:0, instance:Demo.MatchbookAI.LoginTest@43b9fd5]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1046545660</td>   <td></td> </tr>
-<tr bgcolor="99686d">  <td>21/07/23 12:15:04</td>   <td>14021</td> <td title="&lt;&lt;MasterInit.postConfigue()[pri:0, instance:Demo.MatchbookAI.LoginTest@43b9fd5]">&lt;&lt;postConfigue</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1046545660</td>   <td></td> </tr>
+<tr bgcolor="8dada8">  <td>21/07/23 15:50:20</td>   <td>0</td> <td title="&gt;&gt;MasterInit.fetchSuite(org.testng.ITestContext)[pri:0, instance:Demo.MatchbookAI.LoginTest@39ac0c0a]">&gt;&gt;fetchSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1663888181</td>   <td></td> </tr>
+<tr bgcolor="8dada8">  <td>21/07/23 15:50:20</td>   <td>56</td> <td>&nbsp;</td><td title="&gt;&gt;MasterInit.fetchSuiteConfiguration(org.testng.ITestContext)[pri:0, instance:Demo.MatchbookAI.LoginTest@39ac0c0a]">&gt;&gt;fetchSuiteConfiguration</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1663888181</td>   <td></td> </tr>
+<tr bgcolor="8dada8">  <td>21/07/23 15:50:20</td>   <td>84</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;MasterInit.setUp(java.lang.reflect.Method, org.testng.ITestContext, org.testng.ITestResult)[pri:0, instance:Demo.MatchbookAI.LoginTest@39ac0c0a]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1663888181</td>   <td></td> </tr>
+<tr bgcolor="bbb77c">  <td>21/07/23 15:50:20</td>   <td>101</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.login()[pri:0, instance:Demo.MatchbookAI.LoginTest@39ac0c0a]">login</td> 
+  <td>main@1663888181</td>   <td></td> </tr>
+<tr bgcolor="8dada8">  <td>21/07/23 15:50:20</td>   <td>119</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;MasterInit.tearDown(org.testng.ITestResult, org.testng.ITestContext)[pri:0, instance:Demo.MatchbookAI.LoginTest@39ac0c0a]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1663888181</td>   <td></td> </tr>
+<tr bgcolor="8dada8">  <td>21/07/23 15:50:20</td>   <td>330</td> <td title="&lt;&lt;MasterInit.postConfigue()[pri:0, instance:Demo.MatchbookAI.LoginTest@39ac0c0a]">&lt;&lt;postConfigue</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1663888181</td>   <td></td> </tr>
 </table>
